--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "author": "Krzysztof Chojka",
     "license": "MIT",
     "dependencies": {
-        "axios": "^1.7.2",
+        "axios": "^1.8.4",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "express": "^4.19.2",
+        "form-data": "^4.0.2",
         "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
